Ticket #28386: Fixed filter button spacing.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -448,7 +448,7 @@ div.fltHeader {
 .fltCommandContent {
 	text-align: center;
 	box-sizing: border-box;
-	padding: var(--spacing-03) var(--spacing-01) var(--spacing-02) var(--spacing-01);
+	padding: var(--spacing-03) var(--spacing-03) var(--spacing-02) var(--spacing-03);
 }
 
 .fltMenu {
